# Vehicle_Localization_With_Traffic_Lights

./: README.md  copy_files.sh
morse/fourwd/: simulation.py
morse/fourwd/data/fourwd/environments/: LowPolyVehicle_PassCar.dae  aras_4_two_cars_final.blend
morse/fourwd/data/fourwd/environments/objects/: racetrack_object.blend
morse/fourwd/data/fourwd/robots/: HummerScaled.blend  dummy_car_2.blend  dummy_car_low.blend  pole.blend
morse/fourwd/src/fourwd/actuators/: dummy_car_keyboard.py  slim_keyboard.py
morse/fourwd/src/fourwd/builder/actuators/: dummy_car_keyboard.py  slim_keyboard.py
morse/fourwd/src/fourwd/builder/robots/: HummerScaled.py  dummy_car.py  dummy_car_2.py  pole.py
morse/fourwd/src/fourwd/robots/: HummerScaled.py  dummy_car.py  dummy_car_2.py  pole.py
src/MATLAB-GUI/: app1.mlapp  calib_results.m  results.m
src/config/: dbs.rviz
src/custom_obstacle_msgs/: CMakeLists.txt  README.md  package.xml
src/custom_obstacle_msgs/msg/: Coord.msg  Obstacles.msg  Position.msg  Zone.msg
src/object_location/: CMakeLists.txt  package.xml
src/object_location/launch/: camera_to_world.launch
src/object_location/src/: blue_car.py  main.py
src/pose_publisher/: CMakeLists.txt  package.xml
src/pose_publisher/launch/: pose_publisher.launch  sensor_params.yaml
src/pose_publisher/scripts/: covariance_setter.py  pose_publisher.py  transform.py
src/pose_publisher/src/: pose_publisher.cpp
yolov4_tiny_files/: CMakeLists.txt  Makefile  YoloObjectDetector.cpp  darknet_ros_car.launch  ros.yaml  ros_car.yaml  yolo_v4.launch  yolov4.yaml
