<?xml version="1.0"?>
<package format="2">
    <name>custom_obstacle_msgs</name>
    <version>0.1.0</version>
    <description>The custom_obstacle_msgs package</description>
    <maintainer email="tzu.l.huang@campus.tu-berlin.de">Tzu Lin, Huang</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
</package>
